// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateTable component match snapshot correctly - with delta value "0" 1`] = `
<StateTable
  districts={Object {}}
  stateList={Array []}
/>
`;

exports[`StateTable component match snapshot correctly - with empty array 1`] = `
<table
  className="fadeInUp sm-p0 comp-mb"
>
  <thead>
    <tr>
      <th>
        State
      </th>
      <th>
        Confirmed
      </th>
      <th>
        Active
      </th>
      <th>
        Recovered
      </th>
      <th>
        Deceased
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="state-row "
      id="state-row-AP"
      key="AP"
      onClick={[Function]}
    >
      <td
        className="flex flex-center flex-space-between"
      >
        <p
          className="full-width"
        >
          Total
        </p>
        <ArrowUp
          color="#827397"
          size={16}
        />
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              524
            </p>
          </div>
          <p>
            67700
          </p>
        </div>
      </td>
      <td>
        44351
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#28a745"
              size="12"
            />
            <p
              className="tag mr1 tag-green"
            >
              160
            </p>
          </div>
          <p>
            21130
          </p>
        </div>
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              2
            </p>
          </div>
          <p>
            2215
          </p>
        </div>
      </td>
    </tr>
    <tr
      className="state-row "
      id="state-row-TN"
      key="TN"
      onClick={[Function]}
    >
      <td
        className="flex flex-center flex-space-between"
      >
        <p
          className="full-width"
        >
          Total
        </p>
        <ArrowUp
          color="#827397"
          size={16}
        />
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              524
            </p>
          </div>
          <p>
            67700
          </p>
        </div>
      </td>
      <td>
        44351
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#28a745"
              size="12"
            />
            <p
              className="tag mr1 tag-green"
            >
              160
            </p>
          </div>
          <p>
            21130
          </p>
        </div>
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <p>
            2215
          </p>
        </div>
      </td>
    </tr>
    <tr
      className="state-row "
      id="state-row-TT"
      key="TT"
      onClick={[Function]}
    >
      <td
        className="flex flex-center flex-space-between"
      >
        <p
          className="full-width"
        >
          Total
        </p>
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              524
            </p>
          </div>
          <p>
            67700
          </p>
        </div>
      </td>
      <td>
        44351
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#28a745"
              size="12"
            />
            <p
              className="tag mr1 tag-green"
            >
              160
            </p>
          </div>
          <p>
            21130
          </p>
        </div>
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              2
            </p>
          </div>
          <p>
            2215
          </p>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`StateTable component match snapshot correctly - with empty array 2`] = `
<StateTable
  districts={Object {}}
  stateList={
    Array [
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "2",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "TT",
        "statenotes": "",
      },
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "2",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "AP",
        "statenotes": "",
      },
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "0",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "TN",
        "statenotes": "",
      },
    ]
  }
>
  <table
    className="fadeInUp sm-p0 comp-mb"
  >
    <thead>
      <tr>
        <th>
          State
        </th>
        <th>
          Confirmed
        </th>
        <th>
          Active
        </th>
        <th>
          Recovered
        </th>
        <th>
          Deceased
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="state-row "
        id="state-row-AP"
        key="AP"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
          <ArrowUp
            color="#827397"
            size={16}
          >
            <svg
              fill="#827397"
              height={16}
              stroke="#827397"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ArrowUp>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                2
              </p>
            </div>
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
      <tr
        className="state-row "
        id="state-row-TN"
        key="TN"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
          <ArrowUp
            color="#827397"
            size={16}
          >
            <svg
              fill="#827397"
              height={16}
              stroke="#827397"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ArrowUp>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
      <tr
        className="state-row "
        id="state-row-TT"
        key="TT"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                2
              </p>
            </div>
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</StateTable>
`;

exports[`StateTable component match snapshot correctly 1`] = `
<table
  className="fadeInUp sm-p0 comp-mb"
>
  <thead>
    <tr>
      <th>
        State
      </th>
      <th>
        Confirmed
      </th>
      <th>
        Active
      </th>
      <th>
        Recovered
      </th>
      <th>
        Deceased
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="state-row "
      id="state-row-AP"
      key="AP"
      onClick={[Function]}
    >
      <td
        className="flex flex-center flex-space-between"
      >
        <p
          className="full-width"
        >
          Total
        </p>
        <ArrowUp
          color="#827397"
          size={16}
        />
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              524
            </p>
          </div>
          <p>
            67700
          </p>
        </div>
      </td>
      <td>
        44351
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#28a745"
              size="12"
            />
            <p
              className="tag mr1 tag-green"
            >
              160
            </p>
          </div>
          <p>
            21130
          </p>
        </div>
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              2
            </p>
          </div>
          <p>
            2215
          </p>
        </div>
      </td>
    </tr>
    <tr
      className="state-row "
      id="state-row-TN"
      key="TN"
      onClick={[Function]}
    >
      <td
        className="flex flex-center flex-space-between"
      >
        <p
          className="full-width"
        >
          Total
        </p>
        <ArrowUp
          color="#827397"
          size={16}
        />
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              524
            </p>
          </div>
          <p>
            67700
          </p>
        </div>
      </td>
      <td>
        44351
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#28a745"
              size="12"
            />
            <p
              className="tag mr1 tag-green"
            >
              160
            </p>
          </div>
          <p>
            21130
          </p>
        </div>
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <p>
            2215
          </p>
        </div>
      </td>
    </tr>
    <tr
      className="state-row "
      id="state-row-TT"
      key="TT"
      onClick={[Function]}
    >
      <td
        className="flex flex-center flex-space-between"
      >
        <p
          className="full-width"
        >
          Total
        </p>
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              524
            </p>
          </div>
          <p>
            67700
          </p>
        </div>
      </td>
      <td>
        44351
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#28a745"
              size="12"
            />
            <p
              className="tag mr1 tag-green"
            >
              160
            </p>
          </div>
          <p>
            21130
          </p>
        </div>
      </td>
      <td>
        <div
          className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
        >
          <div
            className="flex flex-end"
          >
            <ArrowUp
              color="#ff073a"
              size="12"
            />
            <p
              className="tag mr1 "
            >
              2
            </p>
          </div>
          <p>
            2215
          </p>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`StateTable component match snapshot correctly 2`] = `
<StateTable
  districts={
    Object {
      "Andaman and Nicobar Islands": Object {
        "districtData": Object {
          "North and Middle Andaman": Object {
            "active": 0,
            "confirmed": 1,
            "deceased": 0,
            "delta": Object {
              "confirmed": 0,
              "deceased": 0,
              "recovered": 0,
            },
            "notes": "",
            "recovered": 1,
          },
          "South Andaman": Object {
            "active": 0,
            "confirmed": 32,
            "deceased": 0,
            "delta": Object {
              "confirmed": 0,
              "deceased": 0,
              "recovered": 0,
            },
            "notes": "",
            "recovered": 32,
          },
        },
        "statecode": "AN",
      },
    }
  }
  stateList={
    Array [
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "2",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "TT",
        "statenotes": "",
      },
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "2",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "AP",
        "statenotes": "",
      },
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "0",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "TN",
        "statenotes": "",
      },
    ]
  }
>
  <table
    className="fadeInUp sm-p0 comp-mb"
  >
    <thead>
      <tr>
        <th>
          State
        </th>
        <th>
          Confirmed
        </th>
        <th>
          Active
        </th>
        <th>
          Recovered
        </th>
        <th>
          Deceased
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="state-row district-row"
        id="state-row-AP"
        key="AP"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
          <ArrowUp
            color="#827397"
            size={16}
          >
            <svg
              fill="#827397"
              height={16}
              stroke="#827397"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              transform="rotate(-90)"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ArrowUp>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                2
              </p>
            </div>
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
      <tr
        className="state-row "
        id="state-row-TN"
        key="TN"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
          <ArrowUp
            color="#827397"
            size={16}
          >
            <svg
              fill="#827397"
              height={16}
              stroke="#827397"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ArrowUp>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
      <tr
        className="state-row "
        id="state-row-TT"
        key="TT"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                2
              </p>
            </div>
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</StateTable>
`;

exports[`StateTable component match snapshot correctly 3`] = `
<StateTable
  districts={
    Object {
      "Andaman and Nicobar Islands": Object {
        "districtData": Object {
          "North and Middle Andaman": Object {
            "active": 0,
            "confirmed": 1,
            "deceased": 0,
            "delta": Object {
              "confirmed": 0,
              "deceased": 0,
              "recovered": 0,
            },
            "notes": "",
            "recovered": 1,
          },
          "South Andaman": Object {
            "active": 0,
            "confirmed": 32,
            "deceased": 0,
            "delta": Object {
              "confirmed": 0,
              "deceased": 0,
              "recovered": 0,
            },
            "notes": "",
            "recovered": 32,
          },
        },
        "statecode": "AN",
      },
    }
  }
  stateList={
    Array [
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "2",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "TT",
        "statenotes": "",
      },
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "2",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "AP",
        "statenotes": "",
      },
      Object {
        "active": "44351",
        "confirmed": "67700",
        "deaths": "2215",
        "deltaconfirmed": "524",
        "deltadeaths": "0",
        "deltarecovered": "160",
        "lastupdatedtime": "11/05/2020 15:41:22",
        "recovered": "21130",
        "state": "Total",
        "statecode": "TN",
        "statenotes": "",
      },
    ]
  }
>
  <table
    className="fadeInUp sm-p0 comp-mb"
  >
    <thead>
      <tr>
        <th>
          State
        </th>
        <th>
          Confirmed
        </th>
        <th>
          Active
        </th>
        <th>
          Recovered
        </th>
        <th>
          Deceased
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="state-row "
        id="state-row-AP"
        key="AP"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
          <ArrowUp
            color="#827397"
            size={16}
          >
            <svg
              fill="#827397"
              height={16}
              stroke="#827397"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ArrowUp>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                2
              </p>
            </div>
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
      <tr
        className="state-row "
        id="state-row-TN"
        key="TN"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
          <ArrowUp
            color="#827397"
            size={16}
          >
            <svg
              fill="#827397"
              height={16}
              stroke="#827397"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ArrowUp>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
      <tr
        className="state-row "
        id="state-row-TT"
        key="TT"
        onClick={[Function]}
      >
        <td
          className="flex flex-center flex-space-between"
        >
          <p
            className="full-width"
          >
            Total
          </p>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                524
              </p>
            </div>
            <p>
              67700
            </p>
          </div>
        </td>
        <td>
          44351
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#28a745"
                size="12"
              >
                <svg
                  fill="#28a745"
                  height="12"
                  stroke="#28a745"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 tag-green"
              >
                160
              </p>
            </div>
            <p>
              21130
            </p>
          </div>
        </td>
        <td>
          <div
            className="flex flex-end flex-justify-end sm-flex-wrap sm-flex-justify-center"
          >
            <div
              className="flex flex-end"
            >
              <ArrowUp
                color="#ff073a"
                size="12"
              >
                <svg
                  fill="#ff073a"
                  height="12"
                  stroke="#ff073a"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="19"
                    y2="5"
                  />
                  <polyline
                    points="5 12 12 5 19 12"
                  />
                </svg>
              </ArrowUp>
              <p
                className="tag mr1 "
              >
                2
              </p>
            </div>
            <p>
              2215
            </p>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</StateTable>
`;

exports[`StateTable component match snapshot correctly- with empty object 1`] = `""`;
